# SAM_HQ_Building_Segmentation

./: .gitignore  README.md  clip_raster_by_polygon_mask.py  dataset.py  inference.py  pyproject.toml  tile_preperation.py  train.py
