[project]
name = "sam-hq-building-segmentation"
version = "0.1.0"
description = ""
authors = [
    {name = "spscheidl",email = "sylvia.pscheidl@heigit.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sam-hq-building-segmentation"

packages = [
    { include = "sam_hq_building_segmentation" }
]