[project]
name = "SAM_HQ_Building_Segmentation"
version = "0.1.0"
description = ""
authors = [
    {name = "spscheidl",email = "sylvia.pscheidl@heigit.org"}
]
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "timm (>=1.0.22,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "numpy (>=2.2,<3.0)",
    "segment-anything @ git+https://github.com/SysCV/sam-hq.git"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sam-hq-building-segmentation"

packages = [
    { include = "sam_hq_building_segmentation" }
]